--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h2 id="outAnswer"></h2>
     </main>
 </body>
-<script src="/src/js/scripts.js"></script>
+<script src="src/js/scripts.js"></script>
 
 
 </html>
